# argos3-tycho

./: .gitignore  README.md  path_planning_RVR_dodecagonal_arena.argos  path_planning_dodecagonal_arena.argos  pathpla_mission_0_100.xml  start_path_planning.sh  test-mission.argos
src/: CMakeLists.txt  package.xml
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  TargetLocalEPuck.cmake
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/e-puck/real_robot/: real_epuck_its.cpp  real_epuck_its.h  real_epuck_its_main.cpp
src/plugins/robots/e-puck/simulator/: epuck_ground_virtual_sensor.cpp  epuck_ground_virtual_sensor.h
src/plugins/robots/generic/control_interface/: ci_destination_virtual_sensor.cpp  ci_destination_virtual_sensor.h  ci_gps_virtual_sensor.cpp  ci_gps_virtual_sensor.h  ci_virtual_black_white_location_sensor.cpp  ci_virtual_black_white_location_sensor.h  ci_virtual_pollutant_sensor.cpp  ci_virtual_pollutant_sensor.h  ci_virtual_radiation_sensor.cpp  ci_virtual_radiation_sensor.h  ci_virtual_rgb_ground_sensor.cpp  ci_virtual_rgb_ground_sensor.h  virtual_sensor_data_position2d.h  virtual_sensor_network_data.h  virtual_sensor_register.cpp  virtual_sensor_register.h
src/plugins/robots/generic/real_robot/: real_destination_virtual_sensor.cpp  real_destination_virtual_sensor.h  real_gps_virtual_sensor.cpp  real_gps_virtual_sensor.h  real_virtual_black_white_location_sensor.cpp  real_virtual_black_white_location_sensor.h  real_virtual_ground_sensor.cpp  real_virtual_ground_sensor.h  real_virtual_light_sensor.cpp  real_virtual_light_sensor.h  real_virtual_pollutant_sensor.cpp  real_virtual_pollutant_sensor.h  real_virtual_radiation_sensor.cpp  real_virtual_radiation_sensor.h  real_virtual_rgb_ground_sensor.cpp  real_virtual_rgb_ground_sensor.h  real_virtual_sensor.cpp  real_virtual_sensor.h  virtual_sensor_client.cpp  virtual_sensor_client.h
src/plugins/robots/generic/simulator/: destination_virtual_sensor.cpp  destination_virtual_sensor.h  generic_virtual_sensor.cpp  generic_virtual_sensor.h  gps_virtual_sensor.cpp  gps_virtual_sensor.h  ground_virtual_sensor.cpp  ground_virtual_sensor.h  light_virtual_sensor.cpp  light_virtual_sensor.h  virtual_black_white_location_sensor.cpp  virtual_black_white_location_sensor.h  virtual_pollutant_sensor.cpp  virtual_pollutant_sensor.h  virtual_radiation_sensor.cpp  virtual_radiation_sensor.h  virtual_rgb_ground_sensor.cpp  virtual_rgb_ground_sensor.h
src/plugins/simulator/: CMakeLists.txt
src/plugins/simulator/physics_engines/: CMakeLists.txt
src/plugins/simulator/physics_engines/iridia_tracking_system/: CMakeLists.txt  iridia_tracking_system.cpp  iridia_tracking_system.h  iridia_tracking_system_box_model.cpp  iridia_tracking_system_box_model.h  iridia_tracking_system_circular_model.h  iridia_tracking_system_cylinder_model.cpp  iridia_tracking_system_cylinder_model.h  iridia_tracking_system_epuck_model.cpp  iridia_tracking_system_epuck_model.h  iridia_tracking_system_footbot_model.cpp  iridia_tracking_system_footbot_model.h  iridia_tracking_system_model.h  iridia_tracking_system_rectangular_model.h  iridia_tracking_system_rvr_model.cpp  iridia_tracking_system_rvr_model.h  tycho_status_thread.cpp  tycho_status_thread.h
src/plugins/simulator/physics_engines/iridia_tracking_system/argos_its_client/: arena_state_struct.cpp  arena_state_struct.h  argos_its_client_thread.cpp  argos_its_client_thread.h
src/plugins/simulator/physics_engines/iridia_tracking_system/virtual_sensor_server/: virtual_sensor_data.cpp  virtual_sensor_data.h  virtual_sensor_server.cpp  virtual_sensor_server.h
src/testing/: CMakeLists.txt  path_planning.argos  path_planning_dodecagonal_arena.argos  path_planning_testfixedpos.argos  path_planningken.argos  real_time_experiment.argos  simulation_with_virtual_sensors.argos
src/testing/controllers/: CMakeLists.txt  ground_sensor_prototype_controller.cpp  ground_sensor_prototype_controller.h  its_controller.cpp  its_controller.h  path_planning_controller.cpp  path_planning_controller.h  path_planning_controller_rvr.cpp  path_planning_controller_rvr.h  real_ground_sensor_sampler.cpp  real_ground_sensor_sampler.h  replace_controller.h  void_controller.cpp  void_controller.h
src/testing/epuck_its_client/: CMakeLists.txt  epuck_client_main.cpp  epuck_its_client.cpp  epuck_its_client.h
src/testing/loop_functions/: CMakeLists.txt
src/testing/loop_functions/pathplanning_loop_functions/: CMakeLists.txt  assignment_generator.h  dijkstra_path_generator.cpp  dijkstra_path_generator.h  min_max_assignment_generator.cpp  min_max_assignment_generator.h  path_generator.h  pathplanning_loop_functions.cpp  pathplanning_loop_functions.h  pathplanning_qt_user_functions.cpp  pathplanning_qt_user_functions.h  pathplanning_rvr_qt_user_functions.cpp  pathplanning_rvr_qt_user_functions.h  position_generator.h  simplified_pathplanning_loop_functions.cpp  simplified_pathplanning_loop_functions.h  simplified_pathplanning_rvr_loop_functions.cpp  simplified_pathplanning_rvr_loop_functions.h
